# HALI

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  EXPERIMENTAL_PROTOCOL.md  EXPERIMENT_PLAN.md  EXPERIMENT_QUICKSTART.md  EXPERIMENT_RESULTS.md  README.md  docker-compose.yml
.claude/: settings.local.json
Documentation/: HALIV2_IMPROVEMENTS.md  PRODUCTION_RESULTS.md  RESEARCH.md  RESEARCH_PROGRESS.md  SPECIFICATIONS.md
data/: user032
data/fs-hasher-0.9.5/: ChangeLog  configure  configure.ac  hf-anonymizer.c  libhashfile.c
include/: bloom_filter.h  data_generator.h  hash_utils.h  index_interface.h  sosd_loader.h  timing_utils.h  workload_generator.h  wt_hali_config_selector.h
include/indexes/: alex_index.h  art_index.h  btree_index.h  hali_index.h  haliv2_index.h  hash_index.h  pgm_index.h  rmi_index.h
report/: README.md  presentation.tex  presentation_old.tex
results/: FINAL_BENCHMARK_SUMMARY.md  RESULTS.md  benchmark_results.csv  performance_detailed.csv  performance_summary.csv
results/comprehensive/: benchmark_run_final.txt  final_benchmark_output.txt
results/experiments/: experiment_results_phase2.1_final.csv  experiment_results_phase2.1_final.json  experiment_results_phase2.2_checkpoint.csv  experiment_results_phase2.2_final.json  experiment_results_phase2.3_checkpoint.json  experiment_results_phase2.3_final.csv
scripts/: analyze_comprehensive_benchmarks.py  analyze_experiments.py  build.sh  download_sosd.sh  experiment_runner.py  run_docker.sh  setup_libraries.sh  visualize_results.py
src/: main.cpp  validate.cpp
(+2 files in other folders)
